--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,13 +21,13 @@
         <activity android:name=".ui.activity.list.VideoListActivity"></activity>
         <activity android:name=".ui.activity.pager.PhotoPagerActivity"></activity>
         <activity android:name=".ui.activity.player.SoundPlayerActivity"></activity>
-        <activity android:name=".ui.activity.player.RefactoredSoundPlayerActivity"></activity>
         <provider
             android:authorities="com.example.student.smartmediagallery.internal_file_provider"
             android:name=".provider.InternalFileProvider"
             android:enabled="true"
             android:grantUriPermissions="true">
         </provider>
+        <service android:name=".service.DownloadingService"></service>
     </application>
 
 </manifest>
