--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.daimajia.numberprogressbar:library:1.2@aar'
+    compile 'com.squareup:otto:1.3.8'
 }
