--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.list.PhotoListActivity">
+        <activity android:name=".ui.activity.list.PhotoListActivity" android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.list.SoundListActivity"/>
-        <activity android:name=".ui.activity.list.VideoListActivity"/>
-        <activity android:name=".ui.activity.pager.PhotoPagerActivity"/>
-        <activity android:name=".ui.activity.player.SoundPlayerActivity"/>
-        <activity android:name=".ui.activity.player.VideoPlayerActivity"/>
+        <activity android:name=".ui.activity.list.SoundListActivity" android:configChanges="orientation|screenSize"/>
+        <activity android:name=".ui.activity.list.VideoListActivity" android:configChanges="orientation|screenSize"/>
+        <activity android:name=".ui.activity.pager.PhotoPagerActivity" android:configChanges="orientation|screenSize"/>
+        <activity android:name=".ui.activity.player.SoundPlayerActivity" android:configChanges="orientation|screenSize"/>
+        <activity android:name=".ui.activity.player.VideoPlayerActivity" android:configChanges="orientation|screenSize"/>
 
         <provider
             android:authorities="com.example.student.smartmediagallery.internal_file_provider"
@@ -30,23 +30,8 @@
             android:grantUriPermissions="true">
         </provider>
 
-        <!--<service android:name=".service.DownloadingService"/>-->
-        <service android:name=".service.RefactoredDownloaderService"/>
-        <activity android:name=".ui.activity.player.RefactoredVideoPlayerActivity"></activity>
-        <receiver android:name=".ui.activity.player.RefactoredVideoPlayerActivity$DownloadManagerReceiver"></receiver>
-
-        <!--<receiver-->
-            <!--android:name=".net.DownloadManager$DownloadManagerReceiver">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="@string/action_receiver_download_manager"/>-->
-            <!--</intent-filter>-->
-        <!--</receiver>-->
-
-        <!--<receiver android:name=".service.DownloaderService$DownloaderServiceReceiver">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="@string/action_receiver_downloader_service"/>-->
-            <!--</intent-filter>-->
-        <!--</receiver>-->
+        <service android:name=".service.DownloaderService"/>
+        <receiver android:name=".ui.activity.player.VideoPlayerActivity$DownloadManagerReceiver"></receiver>
 
     </application>
 
